# quicktile

./: .codeclimate.yml  .coveragerc  .gitignore  .scrutinizer.yml  .travis.yml  AUTHORS  CONTRIBUTING.rst  ChangeLog  MANIFEST.in  README  README.md  README.rst  _config.yml  commands.html  dev_requirements.txt  faq.html  index.html  install.sh  pylintrc  pyproject.toml  quicktile.desktop  quicktile.py  quicktile.sh  recompile_local_debian_package.sh  run_tests.sh  setup.cfg  setup.py  test_functional.py  test_functional.sh  test_quicktile.py  tox.ini
_includes/: apt_btn.html  contrib_box.html
_layouts/: default.html
apidocs/: api-objects.txt  bug-index.html  class-tree.html  exceptions.AssertionError-class.html  help.html  identifier-index.html  index.html  module-tree.html  quicktile-module.html  quicktile-pysrc.html  quicktile.CommandRegistry-class.html  quicktile.DependencyError-class.html  quicktile.EnumSafeDict-class.html  quicktile.GravityLayout-class.html  quicktile.KeyBinder-class.html  quicktile.QuickTileApp-class.html  quicktile.WindowManager-class.html  quicktile.XInitError-class.html  quicktile.__main__-module.html  quicktile.__main__-pysrc.html  quicktile.__main__.QuickTileApp-class.html  quicktile.commands-module.html  quicktile.commands-pysrc.html  quicktile.commands.CommandRegistry-class.html  quicktile.dbus_api-module.html  quicktile.dbus_api-pysrc.html  quicktile.dbus_api.QuickTile-class.html  quicktile.gtkexcepthook-module.html  quicktile.gtkexcepthook-pysrc.html  quicktile.keybinder-module.html  quicktile.keybinder-pysrc.html  quicktile.keybinder.KeyBinder-class.html  quicktile.layout-module.html  quicktile.layout-pysrc.html  quicktile.layout.GravityLayout-class.html  quicktile.util-module.html  quicktile.util-pysrc.html  quicktile.util.EnumSafeDict-class.html  quicktile.util.XInitError-class.html  quicktile.version-module.html  (+34 more)
css/: base.css  contrib_box.css
debian/: changelog  control  copyright  docs  manpages  rules
diagrams/: .gitignore  Makefile  README.md
docs/: AUTHORS  Makefile  cli.rst  commands.rst  conf.py  config.rst  deploy.sh  developing.rst  faq.rst  (+6 more)
(+56 files in other folders)
