[project]
name = "QuickTile"
authors = [{name = 'Stephan Sokolow (deitarion/SSokolow)'}]
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: X11 Applications :: GTK',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Desktop Environment :: Window Managers',
    'Topic :: Utilities',
]

dependencies = [
    "dbus-python",  # TODO: Switch to PyGI-based D-Bus support
    "PyGObject",
    "python-xlib",
]
description='Add keyboard-driven window-tiling to any X11 window manager (inspired by WinSplit Revolution)'
dynamic = ["version"]
keywords=['x11', 'desktop', 'window', 'tiling', 'wm', 'utility', 'addon',
          'extension', 'tile', 'layout', 'positioning', 'helper', 'keyboard',
          'hotkey', 'hotkeys', 'shortcut', 'shortcuts', 'tool']
readme = "README.rst"
requires-python = ">= 3.12"

[project.scripts]
quicktile = "quicktile.__main__:main"

[project.urls]
homepage = "http://ssokolow.com/quicktile/"
repository = "https://github.com/ssokolow/quicktile"
issues = "https://github.com/ssokolow/quicktile/issues"
changelog = "https://github.com/ssokolow/quicktile/blob/master/ChangeLog"

[build-system]
requires = ["setuptools >= 68.1.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=['quicktile']
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "quicktile/VERSION"}

[tool.setuptools.package-data]
quicktile = ["*.desktop"]

[tool.ruff.lint]
ignore = ["N802", "E401", "E402"]
unfixable = ["N802", "E401", "E402"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["gi"]
ignore_missing_imports = true
# TODO: When did follow_untyped_imports = true become "recognized"
